--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
 
       - name: Deploy
         run: |
-          rsync -avz --delete public/ u.tsukuba.ac.jp:$SSH_PATH
+          rsync -e "ssh -o 'StrictHostKeyChecking no'" -avz --delete public/ u.tsukuba.ac.jp:$SSH_PATH
         env:
           SSH_PATH: ${{ secrets.SSH_PATH }}
